--- a/src/styles.css
+++ b/src/styles.css
@@ -18,3 +18,8 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 .center{
     text-align:center !important;
 }
+
+.separador-horizontal-10px{
+    margin-left:5px;
+    margin-right:5px;
+}
