--- a/src/styles.css
+++ b/src/styles.css
@@ -19,7 +19,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     text-align:center !important;
 }
 
-.separador-horizontal-10px{
+.separador-horizontal-10{
     margin-left:5px;
     margin-right:5px;
 }
