--- a/src/app/articulos/articulos-list/articulos-list.component.html
+++ b/src/app/articulos/articulos-list/articulos-list.component.html
@@ -15,27 +15,28 @@
   
   <h1>Artículos</h1>
   
+<div fxLayout="row" fxLayoutAlign="flex-end" style="margin-bottom:15px;">
   <a routerLink="/articulo" mat-flat-button color="primary">Nuevo</a>
-  
+</div>
+
   <table mat-table [dataSource]="articulos" class="mat-elevation-z8 width-100">
   
-      <!-- Position Column -->
-      <!-- <ng-container matColumnDef="Id">
-        <th mat-header-cell *matHeaderCellDef> No. </th>
-        <td mat-cell *matCellDef="let element"> {{element.id}} </td>
-      </ng-container> -->
-    
       <!-- Name Column -->
       <ng-container matColumnDef="Titulo">
         <th mat-header-cell *matHeaderCellDef> Título </th>
         <td mat-cell *matCellDef="let element"> {{element.titulo}} </td>
       </ng-container>
 
+      <ng-container matColumnDef="CategoriaNombre">
+        <th mat-header-cell *matHeaderCellDef> Categoría </th>
+        <td mat-cell *matCellDef="let element"> {{element.categoriaNombre}} </td>
+      </ng-container>
+    
       <ng-container matColumnDef="FechaHoraPublicacion">
         <th mat-header-cell *matHeaderCellDef> FH Publicación </th>
         <td mat-cell *matCellDef="let element"> {{element.fechaHoraPublicacion}} </td>
       </ng-container>
-    
+
       <!-- Weight Column -->
       <ng-container matColumnDef="NombreDeRuta">
         <th mat-header-cell *matHeaderCellDef> Nombre de Ruta </th>
