--- a/src/app/controles-genericos/select/select.component.html
+++ b/src/app/controles-genericos/select/select.component.html
@@ -1,4 +1,4 @@
-<mat-form-field appearance="fill">
+<mat-form-field appearance="fill" style="width:100%;">
   <mat-label>{{nombre}}</mat-label>
   <mat-select [(value)]="valueSelected" (selectionChange)="selectionChangeEvent($event)">
     <mat-option *ngFor="let objeto of objetos" [value]="objeto.key">
