--- a/src/app/categorias/categorias-abm/categorias-abm.component.html
+++ b/src/app/categorias/categorias-abm/categorias-abm.component.html
@@ -1,22 +1,25 @@
-<form
-[formGroup]="formGroup"
-(submit)="accion()"
->
+<mat-card style="margin-top:1em; margin-bottom:1em;">
+    <mat-card-content>
+        <form [formGroup]="formGroup" (submit)="accion()" fxLayout="column">
+        
+            <mat-form-field appearance="fill">
+                <mat-label>Nombre</mat-label>
+                <input matInput formControlName="Nombre">
+                <mat-error>{{obtenerErrorCampoNombre()}}</mat-error>
+            </mat-form-field>
+        
+            <mat-form-field appearance="fill">
+                <mat-label>Nombre de Ruta</mat-label>
+                <input matInput formControlName="NombreDeRuta">
+            </mat-form-field>
+        
+            <div fxLayout="row" fxLayoutAlign="space-between center">
+                <button mat-stroked-button routerLink="/categorias">Cancelar</button>
+                <button mat-flat-button color="primary" [disabled]="formGroup.invalid">{{btn}}</button>
+            </div>
+        
+        </form>
+    </mat-card-content>
+</mat-card>
 
-    <mat-form-field appearance="fill">
-        <mat-label>Nombre</mat-label>
-        <input matInput formControlName="Nombre">
-        <mat-error>{{obtenerErrorCampoNombre()}}</mat-error>
-    </mat-form-field>
 
-    <mat-form-field appearance="fill">
-        <mat-label>Nombre de Ruta</mat-label>
-        <input matInput formControlName="NombreDeRuta">
-    </mat-form-field>
-
-    <div>
-        <button mat-stroked-button routerLink="/categorias">Cancelar</button>
-        <button mat-flat-button color="primary" [disabled]="formGroup.invalid">{{btn}}</button>
-    </div>
-
-</form>
