--- a/src/app/categorias/categorias-list/categorias-list.component.html
+++ b/src/app/categorias/categorias-list/categorias-list.component.html
@@ -4,66 +4,78 @@
   Es para que pueda ocultar o mostrar botones, menues, dentro del o los formularios, pero no para proteger la ruta
   Para proteger la ruta se usa el route guards
 -->
-<app-autorizado [rol]="'admin'">
+<!-- <app-autorizado [rol]="'admin'">
   <ng-container noAutorizado>
     no autorizado
   </ng-container>
   <ng-container autorizado>
     autorizado
   </ng-container>
-</app-autorizado>
+</app-autorizado> -->
 
-<h1>Categorías</h1>
 
-<a routerLink="/categoria" mat-flat-button color="primary">Nuevo</a>
+<mat-card style="margin-top:1em; margin-bottom:2em;">
+  <mat-card-title fxLayout="row" fxLayoutAlign="space-between center">
+    Categorías
+    <div fxLayout="row" fxLayoutAlign="flex-end">
+      <a routerLink="/categoria" mat-flat-button color="primary">Nuevo</a>
+    </div>
+  </mat-card-title>
+  <mat-card-content>
+    <table mat-table [dataSource]="categorias" class="width-100">
 
-<table mat-table [dataSource]="categorias" class="mat-elevation-z8 width-100">
-
-    <!-- Position Column -->
-    <!-- <ng-container matColumnDef="Id">
-      <th mat-header-cell *matHeaderCellDef> No. </th>
-      <td mat-cell *matCellDef="let element"> {{element.id}} </td>
-    </ng-container> -->
-  
-    <!-- Name Column -->
-    <ng-container matColumnDef="Nombre">
-      <th mat-header-cell *matHeaderCellDef> Nombre </th>
-      <td mat-cell *matCellDef="let element"> {{element.nombre}} </td>
-    </ng-container>
-  
-    <!-- Weight Column -->
-    <ng-container matColumnDef="NombreDeRuta">
-      <th mat-header-cell *matHeaderCellDef> Nombre de Ruta </th>
-      <td mat-cell *matCellDef="let element"> {{element.nombreDeRuta}} </td>
-    </ng-container>
-
-    <!-- Weight Column -->
-    <ng-container matColumnDef="Acciones">
-        <th mat-header-cell *matHeaderCellDef class="center"> Acciones </th>
-        <td mat-cell *matCellDef="let element" class="center"> 
-            <a routerLink="../categoria/{{element.id}}" mat-flat-button color="primary">Editar</a>  
-            <button type="button" 
-            mat-flat-button 
-            color="warn"
-            [swal]="{
-              title: 'Confirmación',
-              text: '¿Está seguro que desea borrar el registro?',
-              showCancelButton: true
-            }"
-            (confirm)="eliminar(element)" 
-            >Borrar</button> 
-        </td>
+      <!-- Position Column -->
+      <!-- <ng-container matColumnDef="Id">
+        <th mat-header-cell *matHeaderCellDef> No. </th>
+        <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+      </ng-container> -->
+    
+      <!-- Name Column -->
+      <ng-container matColumnDef="Nombre">
+        <th mat-header-cell *matHeaderCellDef> Nombre </th>
+        <td mat-cell *matCellDef="let element"> {{element.nombre}} </td>
+      </ng-container>
+    
+      <!-- Weight Column -->
+      <ng-container matColumnDef="NombreDeRuta">
+        <th mat-header-cell *matHeaderCellDef> Nombre de Ruta </th>
+        <td mat-cell *matCellDef="let element"> {{element.nombreDeRuta}} </td>
       </ng-container>
   
-    <tr mat-header-row *matHeaderRowDef="columnasAMostrar"></tr>
-    <tr mat-row *matRowDef="let row; columns: columnasAMostrar;"></tr>
-  </table>
+      <!-- Weight Column -->
+      <ng-container matColumnDef="Acciones">
+          <th mat-header-cell *matHeaderCellDef class="center"> Acciones </th>
+          <td mat-cell *matCellDef="let element" style="text-align: right;"> 
+              <a routerLink="../categoria/{{element.id}}" mat-flat-button color="primary">Editar</a>  
+              <button type="button" 
+              mat-flat-button 
+              color="warn"
+              [swal]="{
+                title: 'Confirmación',
+                text: '¿Está seguro que desea borrar el registro?',
+                showCancelButton: true
+              }"
+              (confirm)="eliminar(element)" 
+              >Borrar</button> 
+          </td>
+        </ng-container>
+    
+      <tr mat-header-row *matHeaderRowDef="columnasAMostrar"></tr>
+      <tr mat-row *matRowDef="let row; columns: columnasAMostrar;"></tr>
+    </table>
+  
+    <mat-paginator 
+    showFirstLastButton
+    [length]="cantidadTotalDeRegistros"
+                [pageSize]="cantidadDeRegistrosAMostrar"
+                [pageSizeOptions]="[5, 10, 20, 50]"
+                aria-label="Select page"
+      (page)="actualizarPaginacion($event)">
+  </mat-paginator>
+  </mat-card-content>
+</mat-card>
 
-  <mat-paginator 
-  showFirstLastButton
-  [length]="cantidadTotalDeRegistros"
-              [pageSize]="cantidadDeRegistrosAMostrar"
-              [pageSizeOptions]="[5, 10, 20, 50]"
-              aria-label="Select page"
-    (page)="actualizarPaginacion($event)">
-</mat-paginator>
+
+
+
+
