--- a/src/app/galeria/galeria.component.html
+++ b/src/app/galeria/galeria.component.html
@@ -1,3 +1,6 @@
+
+
+
 <mat-card style="margin-top:1em; margin-bottom:1em; min-height: 70vh;">
     <mat-card-content style="margin:0;">
         <mat-tab-group>
@@ -6,7 +9,9 @@
                     <app-input-img (imagenSeleccionada)="imagenSeleccionada($event)"></app-input-img>
                 </div>
             </mat-tab>
-            <mat-tab label="Galería"> Content 2 </mat-tab>
+            <mat-tab label="Galería"> 
+                <app-list-img></app-list-img>   
+            </mat-tab>
         </mat-tab-group>
     </mat-card-content>
 </mat-card>
