--- a/src/app/utilidades/list-img/list-img.component.html
+++ b/src/app/utilidades/list-img/list-img.component.html
@@ -94,9 +94,8 @@ style="background-color:#ccc; border-radius:5px;"> -->
                 </div>
             </mat-card-content>
             <mat-card-actions fxLayout="row" fxLayoutAlign="center center">
-                <button mat-button><small>Ver</small></button>
                 <button mat-button cdkCopyToClipboard="{{img.ruta}}" (click)="openSnackBar('URL Copiada')"><small>Url</small></button>
-                <button mat-button cdkCopyToClipboard="{{img.nombre}}" (click)="openSnackBar('TAG Copiado')"><small>Tag</small></button>
+                <button mat-button cdkCopyToClipboard="[{{img.id}}*{{img.nombre}}]" (click)="openSnackBar('TAG Copiado')"><small>Tag</small></button>
             </mat-card-actions>
           </mat-card>
     </div> 
