--- a/src/app/utilidades/list-img/list-img.component.html
+++ b/src/app/utilidades/list-img/list-img.component.html
@@ -74,12 +74,6 @@
   
 </form>
 
-
-<!-- <div fxLayout="row wrap" 
-fxLayoutAlign="space-around flex-start" 
-*ngIf="imagenesList !== undefined"  
-style="background-color:#ccc; border-radius:5px;"> -->
-
 <div 
     fxLayout.xs="column"
     fxLayout.sm="column" 
@@ -105,7 +99,7 @@ style="background-color:#ccc; border-radius:5px;"> -->
             </mat-card-content>
             <mat-card-actions fxLayout="row" fxLayoutAlign="center center">
                 <button mat-button cdkCopyToClipboard="{{img.ruta}}" (click)="openSnackBar('URL Copiada')"><small>Url</small></button>
-                <button mat-button cdkCopyToClipboard="[{{img.id}}*{{img.nombre}}]" (click)="openSnackBar('TAG Copiado')"><small>Tag</small></button>
+                <button mat-button cdkCopyToClipboard="[[{{img.id}}*{{img.nombre}}]]" (click)="openSnackBar('TAG Copiado')"><small>Tag</small></button>
             </mat-card-actions>
           </mat-card>
     </div> 
