boton galeria en imput img

--- a/src/app/articulos/articulos-abm/articulos-abm.component.html
+++ b/src/app/articulos/articulos-abm/articulos-abm.component.html
@@ -66,8 +66,10 @@
 
         <div style="margin: 10px 0px;">
           <app-input-img 
+            [btnCustomText]="btnCustomText"
             [imagen] = "imagen"
             (imagenSeleccionada)="imagenSeleccionada($event)"
+            (btnCustomEvent)="btnCustomMethod($event)"
             ></app-input-img>
         </div>
 
