--- a/src/app/utilidades/list-img/list-img.component.html
+++ b/src/app/utilidades/list-img/list-img.component.html
@@ -100,6 +100,9 @@
             <mat-card-actions fxLayout="row" fxLayoutAlign="center center">
                 <button mat-button cdkCopyToClipboard="{{img.ruta}}" (click)="openSnackBar('URL Copiada')"><small>Url</small></button>
                 <button mat-button cdkCopyToClipboard="[[{{img.id}}*{{img.nombre}}]]" (click)="openSnackBar('TAG Copiado')"><small>Tag</small></button>
+                <div style="margin-left:10px;">
+                    <mat-radio-button matTooltip="Seleccionar Imagen" value="{{img.id}}" (change)="radioChange(img.id)"></mat-radio-button>
+                </div>
             </mat-card-actions>
           </mat-card>
     </div> 
