--- a/src/app/cuentas/cuentas-list/cuentas-list.component.html
+++ b/src/app/cuentas/cuentas-list/cuentas-list.component.html
@@ -1,1 +1,109 @@
-<p>cuentas-list works!</p>
+<!--
+  este componente es el que voy a usar para inidcar, dentro de un componente, 
+  donde se puede o no acceder
+  Es para que pueda ocultar o mostrar botones, menues, dentro del o los formularios, pero no para proteger la ruta
+  Para proteger la ruta se usa el route guards
+-->
+<!-- <app-autorizado [rol]="'admin'">
+    <ng-container noAutorizado>
+      no autorizado
+    </ng-container>
+    <ng-container autorizado>
+      autorizado
+    </ng-container>
+  </app-autorizado> -->
+  <mat-card style="margin-top:1em; margin-bottom:1em;">
+    <form>
+      <mat-card-content 
+      fxLayout.xs="column" 
+      fxLayout.sm="column" 
+      fxLayout.md="row" 
+      fxLayout.lg="row"
+      fxLayout.xl="row" 
+      fxLayoutAlign="space-between stretch"  
+      fxLayoutAlign.md="space-between"
+      fxLayoutWrap
+      style="margin:0;">
+
+        <mat-form-field class="example-full-width" appearance="fill" fxFlex.md="24%">
+          <mat-label>Email</mat-label>
+          <input matInput placeholder="" value="">
+        </mat-form-field>
+
+        <!--para esto puedo usar el desplegable que cree-->
+        <mat-form-field appearance="fill" fxFlex.md="24%">
+          <mat-label>UserName</mat-label>
+            <mat-select>
+              <mat-option> <!--*ngFor="let food of foods" [value]="food.value"-->
+                <!-- {{food.viewValue}} -->
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
+
+      </mat-card-content>
+      <div fxLayout="row" fxLayoutAlign="flex-end">
+        <a routerLink="/cuenta" mat-flat-button>Buscar</a>
+      </div>
+    </form>
+</mat-card>
+
+<mat-card style="margin-top:1em; margin-bottom:2em;">
+  <mat-card-title fxLayout="row" fxLayoutAlign="space-between center">
+    Cuentas
+    <div fxLayout="row" fxLayoutAlign="flex-end">
+      <a routerLink="/articulo" mat-flat-button color="primary">Nuevo</a>
+    </div>
+  </mat-card-title>
+  
+  <mat-card-content>
+    <table mat-table [dataSource]="cuentas" class="width-100">
+
+      <!-- Name Column -->
+      <ng-container matColumnDef="UserName">
+        <th mat-header-cell *matHeaderCellDef> Usuario </th>
+        <td mat-cell *matCellDef="let element"> {{element.usuario}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="Email">
+        <th mat-header-cell *matHeaderCellDef> Email </th>
+        <td mat-cell *matCellDef="let element"> {{element.email}} </td>
+      </ng-container>
+    
+      <!-- Weight Column -->
+      <ng-container matColumnDef="Acciones">
+          <th mat-header-cell *matHeaderCellDef class="center"> Acciones </th>
+          <td mat-cell *matCellDef="let element" style="text-align: right;"> 
+              <a routerLink="../cuenta/{{element.id}}" mat-flat-button color="primary">Editar</a>  
+              <button type="button" 
+              mat-flat-button 
+              color="warn"
+              [swal]="{
+                title: 'Confirmación',
+                text: '¿Está seguro que desea borrar el registro?',
+                showCancelButton: true
+              }"
+              (confirm)="eliminar(element)" 
+              >Borrar</button> 
+          </td>
+        </ng-container>
+    
+      <tr mat-header-row *matHeaderRowDef="columnasAMostrar"></tr>
+      <tr mat-row *matRowDef="let row; columns: columnasAMostrar;"></tr>
+    </table>
+  
+    <mat-paginator 
+      showFirstLastButton
+      [length]="cantidadTotalDeRegistros"
+                  [pageSize]="cantidadDeRegistrosAMostrar"
+                  [pageSizeOptions]="[5, 10, 20, 50]"
+                  aria-label="Select page"
+        (page)="actualizarPaginacion($event)">
+    </mat-paginator>
+  </mat-card-content>
+</mat-card>
+
+
+
+
+
+
