--- a/src/app/cuentas/cuentas-list/cuentas-list.component.html
+++ b/src/app/cuentas/cuentas-list/cuentas-list.component.html
@@ -51,7 +51,7 @@
   <mat-card-title fxLayout="row" fxLayoutAlign="space-between center">
     Cuentas
     <div fxLayout="row" fxLayoutAlign="flex-end">
-      <a routerLink="/articulo" mat-flat-button color="primary">Nuevo</a>
+      <a routerLink="/cuenta" mat-flat-button color="primary">Nuevo</a>
     </div>
   </mat-card-title>
   
