--- a/src/app/articulos/articulos-list/articulos-list.component.html
+++ b/src/app/articulos/articulos-list/articulos-list.component.html
@@ -74,30 +74,29 @@
         <!-- Name Column -->
         <ng-container matColumnDef="Titulo">
           <th mat-header-cell *matHeaderCellDef> Título </th>
-          <td mat-cell *matCellDef="let element"> {{element.titulo}} </td>
+          <td mat-cell *matCellDef="let element"> {{element.Titulo}} </td>
         </ng-container>
   
         <ng-container matColumnDef="CategoriaNombre">
           <th mat-header-cell *matHeaderCellDef> Categoría </th>
-          <td mat-cell *matCellDef="let element"> {{element.categoriaNombre}} </td>
+          <td mat-cell *matCellDef="let element"> {{element.CategoriaNombre}} </td>
         </ng-container>
       
         <ng-container matColumnDef="FechaHoraPublicacion">
           <th mat-header-cell *matHeaderCellDef> FH Publicación </th>
-          <td mat-cell *matCellDef="let element"> {{element.fechaHoraPublicacion}} </td>
+          <td mat-cell *matCellDef="let element"> {{element.FechaHoraPublicacion}} </td>
         </ng-container>
   
-        <!-- Weight Column -->
         <ng-container matColumnDef="NombreDeRuta">
           <th mat-header-cell *matHeaderCellDef> Nombre de Ruta </th>
-          <td mat-cell *matCellDef="let element"> {{element.nombreDeRuta}} </td>
+          <td mat-cell *matCellDef="let element"> {{element.NombreDeRuta}} </td>
         </ng-container>
     
         <!-- Weight Column -->
         <ng-container matColumnDef="Acciones">
             <th mat-header-cell *matHeaderCellDef class="center"> Acciones </th>
             <td mat-cell *matCellDef="let element" style="text-align: right;"> 
-                <a routerLink="../articulo/{{element.id}}" mat-flat-button color="primary">Editar</a>  
+                <a routerLink="../articulo/{{element.Id}}" mat-flat-button color="primary">Editar</a>  
                 <button type="button" 
                 mat-flat-button 
                 color="warn"
@@ -126,6 +125,8 @@
     </mat-card-content>
   </mat-card>
   
+
+
  
   
 
