--- a/src/app/categorias/categorias-list/categorias-list.component.html
+++ b/src/app/categorias/categorias-list/categorias-list.component.html
@@ -33,20 +33,20 @@
       <!-- Name Column -->
       <ng-container matColumnDef="Nombre">
         <th mat-header-cell *matHeaderCellDef> Nombre </th>
-        <td mat-cell *matCellDef="let element"> {{element.nombre}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.Nombre}} </td>
       </ng-container>
     
       <!-- Weight Column -->
       <ng-container matColumnDef="NombreDeRuta">
         <th mat-header-cell *matHeaderCellDef> Nombre de Ruta </th>
-        <td mat-cell *matCellDef="let element"> {{element.nombreDeRuta}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.NombreDeRuta}} </td>
       </ng-container>
   
       <!-- Weight Column -->
       <ng-container matColumnDef="Acciones">
           <th mat-header-cell *matHeaderCellDef class="center"> Acciones </th>
           <td mat-cell *matCellDef="let element" style="text-align: right;"> 
-              <a routerLink="../categoria/{{element.id}}" mat-flat-button color="primary">Editar</a>  
+              <a routerLink="../categoria/{{element.Id}}" mat-flat-button color="primary">Editar</a>  
               <button type="button" 
               mat-flat-button 
               color="warn"
