--- a/src/app/utilidades/input-img/input-img.component.html
+++ b/src/app/utilidades/input-img/input-img.component.html
@@ -25,7 +25,7 @@
 </div>
 
 <div *ngIf="imagen !== undefined && imagenBase64 === undefined" fxLayout="row" fxLayoutAlign="center center">
-    <img [src]="imagen.ruta" class="width-50" />
+    <img [src]="imagen.Ruta" class="width-50" />
 </div>
 
 <div *ngIf="imagenBase64" fxLayout="row" fxLayoutAlign="center center">
