--- a/src/app/cuentas/cuentas-list/cuentas-list.component.html
+++ b/src/app/cuentas/cuentas-list/cuentas-list.component.html
@@ -56,24 +56,24 @@
   </mat-card-title>
   
   <mat-card-content>
-    <table mat-table [dataSource]="cuentas" class="width-100">
+    <table mat-table [dataSource]="usuarios" class="width-100">
 
       <!-- Name Column -->
       <ng-container matColumnDef="UserName">
         <th mat-header-cell *matHeaderCellDef> Usuario </th>
-        <td mat-cell *matCellDef="let element"> {{element.usuario}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.UserName}} </td>
       </ng-container>
 
       <ng-container matColumnDef="Email">
         <th mat-header-cell *matHeaderCellDef> Email </th>
-        <td mat-cell *matCellDef="let element"> {{element.email}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.Email}} </td>
       </ng-container>
     
       <!-- Weight Column -->
       <ng-container matColumnDef="Acciones">
           <th mat-header-cell *matHeaderCellDef class="center"> Acciones </th>
           <td mat-cell *matCellDef="let element" style="text-align: right;"> 
-              <a routerLink="../cuenta/{{element.id}}" mat-flat-button color="primary">Editar</a>  
+              <a routerLink="../cuenta/{{element.Id}}" mat-flat-button color="primary">Editar</a>  
               <button type="button" 
               mat-flat-button 
               color="warn"
